--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-website-1",
-  "homepage":  "https://shafwan-anwer.github.io/portfolio",
+  "homepage":  "https://shafwan-anwer.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
